[package]
name = "solana-token-presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_token_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
num-traits = { version = ">=0.2.0", default-features = false }